mini.output
Terminals unused in grammar

   THEN
   FI
   DO
   DONE
   FUNC


Grammar

    0 $accept: program $end

    1 program: function_declaration_list

    2 function_declaration_list: function_declaration
    3                          | function_declaration_list function_declaration

    4 function_declaration: function
    5                     | declaration

    6 declaration: INT variable_list ';'

    7 variable_list: IDENTIFIER
    8              | variable_list ',' IDENTIFIER

    9 function: function_head '(' parameter_list ')' block
   10         | error

   11 function_head: IDENTIFIER

   12 parameter_list: IDENTIFIER
   13               | parameter_list ',' IDENTIFIER
   14               | /* empty */

   15 statement: assignment_statement ';'
   16          | call_statement ';'
   17          | return_statement ';'
   18          | print_statement ';'
   19          | null_statement ';'
   20          | if_statement
   21          | while_statement
   22          | block
   23          | error

   24 block: '{' declaration_list statement_list '}'

   25 declaration_list: /* empty */
   26                 | declaration_list declaration

   27 statement_list: statement
   28               | statement_list statement

   29 assignment_statement: IDENTIFIER '=' expression

   30 expression: expression '+' expression
   31           | expression '-' expression
   32           | expression '*' expression
   33           | expression '/' expression
   34           | '-' expression
   35           | expression EQ expression
   36           | expression NE expression
   37           | expression LT expression
   38           | expression LE expression
   39           | expression GT expression
   40           | expression GE expression
   41           | '(' expression ')'
   42           | INTEGER
   43           | IDENTIFIER
   44           | call_expression
   45           | error

   46 argument_list: /* empty */
   47              | expression_list

   48 expression_list: expression
   49                | expression_list ',' expression

   50 print_statement: PRINT '(' print_list ')'

   51 print_list: print_item
   52           | print_list ',' print_item

   53 print_item: expression
   54           | TEXT

   55 return_statement: RETURN expression

   56 null_statement: CONTINUE

   57 if_statement: IF '(' expression ')' block
   58             | IF '(' expression ')' block ELSE block

   59 while_statement: WHILE '(' expression ')' block

   60 call_statement: IDENTIFIER '(' argument_list ')'

   61 call_expression: IDENTIFIER '(' argument_list ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 41 50 57 58 59 60 61
')' (41) 9 41 50 57 58 59 60 61
'*' (42) 32
'+' (43) 30
',' (44) 8 13 49 52
'-' (45) 31 34
'/' (47) 33
';' (59) 6 15 16 17 18 19
'=' (61) 29
'{' (123) 24
'}' (125) 24
error (256) 10 23 45
INT (258) 6
EQ (259) 35
NE (260) 36
LT (261) 37
LE (262) 38
GT (263) 39
GE (264) 40
UMINUS (265)
IF (266) 57 58
THEN (267)
ELSE (268) 58
FI (269)
WHILE (270) 59
DO (271)
DONE (272)
CONTINUE (273) 56
FUNC (274)
PRINT (275) 50
RETURN (276) 55
INTEGER (277) 42
IDENTIFIER (278) 7 8 11 12 13 29 43 60 61
TEXT (279) 54


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
function_declaration_list (38)
    on left: 2 3, on right: 1 3
function_declaration (39)
    on left: 4 5, on right: 2 3
declaration (40)
    on left: 6, on right: 5 26
variable_list (41)
    on left: 7 8, on right: 6 8
function (42)
    on left: 9 10, on right: 4
function_head (43)
    on left: 11, on right: 9
parameter_list (44)
    on left: 12 13 14, on right: 9 13
statement (45)
    on left: 15 16 17 18 19 20 21 22 23, on right: 27 28
block (46)
    on left: 24, on right: 9 22 57 58 59
declaration_list (47)
    on left: 25 26, on right: 24 26
statement_list (48)
    on left: 27 28, on right: 24 28
assignment_statement (49)
    on left: 29, on right: 15
expression (50)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right:
    29 30 31 32 33 34 35 36 37 38 39 40 41 48 49 53 55 57 58 59
argument_list (51)
    on left: 46 47, on right: 60 61
expression_list (52)
    on left: 48 49, on right: 47 49
print_statement (53)
    on left: 50, on right: 18
print_list (54)
    on left: 51 52, on right: 50 52
print_item (55)
    on left: 53 54, on right: 51 52
return_statement (56)
    on left: 55, on right: 17
null_statement (57)
    on left: 56, on right: 19
if_statement (58)
    on left: 57 58, on right: 20
while_statement (59)
    on left: 59, on right: 21
call_statement (60)
    on left: 60, on right: 16
call_expression (61)
    on left: 61, on right: 44


State 0

    0 $accept: . program $end

    error       shift, and go to state 1
    INT         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    program                    go to state 4
    function_declaration_list  go to state 5
    function_declaration       go to state 6
    declaration                go to state 7
    function                   go to state 8
    function_head              go to state 9


State 1

   10 function: error .

    $default  reduce using rule 10 (function)


State 2

    6 declaration: INT . variable_list ';'

    IDENTIFIER  shift, and go to state 10

    variable_list  go to state 11


State 3

   11 function_head: IDENTIFIER .

    $default  reduce using rule 11 (function_head)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 12


State 5

    1 program: function_declaration_list .
    3 function_declaration_list: function_declaration_list . function_declaration

    error       shift, and go to state 1
    INT         shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    $end  reduce using rule 1 (program)

    function_declaration  go to state 13
    declaration           go to state 7
    function              go to state 8
    function_head         go to state 9


State 6

    2 function_declaration_list: function_declaration .

    $default  reduce using rule 2 (function_declaration_list)


State 7

    5 function_declaration: declaration .

    $default  reduce using rule 5 (function_declaration)


State 8

    4 function_declaration: function .

    $default  reduce using rule 4 (function_declaration)


State 9

    9 function: function_head . '(' parameter_list ')' block

    '('  shift, and go to state 14


State 10

    7 variable_list: IDENTIFIER .

    $default  reduce using rule 7 (variable_list)


State 11

    6 declaration: INT variable_list . ';'
    8 variable_list: variable_list . ',' IDENTIFIER

    ';'  shift, and go to state 15
    ','  shift, and go to state 16


State 12

    0 $accept: program $end .

    $default  accept


State 13

    3 function_declaration_list: function_declaration_list function_declaration .

    $default  reduce using rule 3 (function_declaration_list)


State 14

    9 function: function_head '(' . parameter_list ')' block

    IDENTIFIER  shift, and go to state 17

    $default  reduce using rule 14 (parameter_list)

    parameter_list  go to state 18


State 15

    6 declaration: INT variable_list ';' .

    $default  reduce using rule 6 (declaration)


State 16

    8 variable_list: variable_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 19


State 17

   12 parameter_list: IDENTIFIER .

    $default  reduce using rule 12 (parameter_list)


State 18

    9 function: function_head '(' parameter_list . ')' block
   13 parameter_list: parameter_list . ',' IDENTIFIER

    ','  shift, and go to state 20
    ')'  shift, and go to state 21


State 19

    8 variable_list: variable_list ',' IDENTIFIER .

    $default  reduce using rule 8 (variable_list)


State 20

   13 parameter_list: parameter_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 22


State 21

    9 function: function_head '(' parameter_list ')' . block

    '{'  shift, and go to state 23

    block  go to state 24


State 22

   13 parameter_list: parameter_list ',' IDENTIFIER .

    $default  reduce using rule 13 (parameter_list)


State 23

   24 block: '{' . declaration_list statement_list '}'

    $default  reduce using rule 25 (declaration_list)

    declaration_list  go to state 25


State 24

    9 function: function_head '(' parameter_list ')' block .

    $default  reduce using rule 9 (function)


State 25

   24 block: '{' declaration_list . statement_list '}'
   26 declaration_list: declaration_list . declaration

    error       shift, and go to state 26
    INT         shift, and go to state 2
    IF          shift, and go to state 27
    WHILE       shift, and go to state 28
    CONTINUE    shift, and go to state 29
    PRINT       shift, and go to state 30
    RETURN      shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 23

    declaration           go to state 33
    statement             go to state 34
    block                 go to state 35
    statement_list        go to state 36
    assignment_statement  go to state 37
    print_statement       go to state 38
    return_statement      go to state 39
    null_statement        go to state 40
    if_statement          go to state 41
    while_statement       go to state 42
    call_statement        go to state 43


State 26

   23 statement: error .

    $default  reduce using rule 23 (statement)


State 27

   57 if_statement: IF . '(' expression ')' block
   58             | IF . '(' expression ')' block ELSE block

    '('  shift, and go to state 44


State 28

   59 while_statement: WHILE . '(' expression ')' block

    '('  shift, and go to state 45


State 29

   56 null_statement: CONTINUE .

    $default  reduce using rule 56 (null_statement)


State 30

   50 print_statement: PRINT . '(' print_list ')'

    '('  shift, and go to state 46


State 31

   55 return_statement: RETURN . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 52
    call_expression  go to state 53


State 32

   29 assignment_statement: IDENTIFIER . '=' expression
   60 call_statement: IDENTIFIER . '(' argument_list ')'

    '('  shift, and go to state 54
    '='  shift, and go to state 55


State 33

   26 declaration_list: declaration_list declaration .

    $default  reduce using rule 26 (declaration_list)


State 34

   27 statement_list: statement .

    $default  reduce using rule 27 (statement_list)


State 35

   22 statement: block .

    $default  reduce using rule 22 (statement)


State 36

   24 block: '{' declaration_list statement_list . '}'
   28 statement_list: statement_list . statement

    error       shift, and go to state 26
    IF          shift, and go to state 27
    WHILE       shift, and go to state 28
    CONTINUE    shift, and go to state 29
    PRINT       shift, and go to state 30
    RETURN      shift, and go to state 31
    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 23
    '}'         shift, and go to state 56

    statement             go to state 57
    block                 go to state 35
    assignment_statement  go to state 37
    print_statement       go to state 38
    return_statement      go to state 39
    null_statement        go to state 40
    if_statement          go to state 41
    while_statement       go to state 42
    call_statement        go to state 43


State 37

   15 statement: assignment_statement . ';'

    ';'  shift, and go to state 58


State 38

   18 statement: print_statement . ';'

    ';'  shift, and go to state 59


State 39

   17 statement: return_statement . ';'

    ';'  shift, and go to state 60


State 40

   19 statement: null_statement . ';'

    ';'  shift, and go to state 61


State 41

   20 statement: if_statement .

    $default  reduce using rule 20 (statement)


State 42

   21 statement: while_statement .

    $default  reduce using rule 21 (statement)


State 43

   16 statement: call_statement . ';'

    ';'  shift, and go to state 62


State 44

   57 if_statement: IF '(' . expression ')' block
   58             | IF '(' . expression ')' block ELSE block

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 63
    call_expression  go to state 53


State 45

   59 while_statement: WHILE '(' . expression ')' block

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 64
    call_expression  go to state 53


State 46

   50 print_statement: PRINT '(' . print_list ')'

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    TEXT        shift, and go to state 65
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 66
    print_list       go to state 67
    print_item       go to state 68
    call_expression  go to state 53


State 47

   45 expression: error .

    $default  reduce using rule 45 (expression)


State 48

   42 expression: INTEGER .

    $default  reduce using rule 42 (expression)


State 49

   43 expression: IDENTIFIER .
   61 call_expression: IDENTIFIER . '(' argument_list ')'

    '('  shift, and go to state 69

    $default  reduce using rule 43 (expression)


State 50

   34 expression: '-' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 70
    call_expression  go to state 53


State 51

   41 expression: '(' . expression ')'

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 71
    call_expression  go to state 53


State 52

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   55 return_statement: RETURN expression .

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81

    $default  reduce using rule 55 (return_statement)


State 53

   44 expression: call_expression .

    $default  reduce using rule 44 (expression)


State 54

   60 call_statement: IDENTIFIER '(' . argument_list ')'

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    ')'  reduce using rule 46 (argument_list)

    expression       go to state 82
    argument_list    go to state 83
    expression_list  go to state 84
    call_expression  go to state 53


State 55

   29 assignment_statement: IDENTIFIER '=' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 85
    call_expression  go to state 53


State 56

   24 block: '{' declaration_list statement_list '}' .

    $default  reduce using rule 24 (block)


State 57

   28 statement_list: statement_list statement .

    $default  reduce using rule 28 (statement_list)


State 58

   15 statement: assignment_statement ';' .

    $default  reduce using rule 15 (statement)


State 59

   18 statement: print_statement ';' .

    $default  reduce using rule 18 (statement)


State 60

   17 statement: return_statement ';' .

    $default  reduce using rule 17 (statement)


State 61

   19 statement: null_statement ';' .

    $default  reduce using rule 19 (statement)


State 62

   16 statement: call_statement ';' .

    $default  reduce using rule 16 (statement)


State 63

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   57 if_statement: IF '(' expression . ')' block
   58             | IF '(' expression . ')' block ELSE block

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    ')'  shift, and go to state 86


State 64

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   59 while_statement: WHILE '(' expression . ')' block

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    ')'  shift, and go to state 87


State 65

   54 print_item: TEXT .

    $default  reduce using rule 54 (print_item)


State 66

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   53 print_item: expression .

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81

    $default  reduce using rule 53 (print_item)


State 67

   50 print_statement: PRINT '(' print_list . ')'
   52 print_list: print_list . ',' print_item

    ','  shift, and go to state 88
    ')'  shift, and go to state 89


State 68

   51 print_list: print_item .

    $default  reduce using rule 51 (print_list)


State 69

   61 call_expression: IDENTIFIER '(' . argument_list ')'

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    ')'  reduce using rule 46 (argument_list)

    expression       go to state 82
    argument_list    go to state 90
    expression_list  go to state 84
    call_expression  go to state 53


State 70

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   34           | '-' expression .
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression

    $default  reduce using rule 34 (expression)


State 71

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   41           | '(' expression . ')'

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81
    ')'  shift, and go to state 91


State 72

   35 expression: expression EQ . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 92
    call_expression  go to state 53


State 73

   36 expression: expression NE . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 93
    call_expression  go to state 53


State 74

   37 expression: expression LT . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 94
    call_expression  go to state 53


State 75

   38 expression: expression LE . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 95
    call_expression  go to state 53


State 76

   39 expression: expression GT . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 96
    call_expression  go to state 53


State 77

   40 expression: expression GE . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 97
    call_expression  go to state 53


State 78

   30 expression: expression '+' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 98
    call_expression  go to state 53


State 79

   31 expression: expression '-' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 99
    call_expression  go to state 53


State 80

   32 expression: expression '*' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 100
    call_expression  go to state 53


State 81

   33 expression: expression '/' . expression

    error       shift, and go to state 47
    INTEGER     shift, and go to state 48
    IDENTIFIER  shift, and go to state 49
    '-'         shift, and go to state 50
    '('         shift, and go to state 51

    expression       go to state 101
    call_expression  go to state 53


State 82

   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression
   48 expression_list: expression .

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
    LE   shift, and go to state 75
    GT   shift, and go to state 76
    GE   shift, and go to state 77
    '+'  shift, and go to state 78
    '-'  shift, and go to state 79
    '*'  shift, and go to state 80
    '/'  shift, and go to state 81

    $default  reduce using rule 48 (expression_list)


State 83

   60 call_statement: IDENTIFIER '(' argument_list . ')'

    ')'  shift, and go to state 102


State 84

   47 argument_list: expression_list .
   49 expression_list: expression_list . ',' expression

    ','  shift, and go to state 103

    $default  reduce using rule 47 (argument_list)


State 85

   29 assignment_statement: IDENTIFIER '=' expression .
   30 expression: expression . '+' expression
   31           | expression . '-' expression
   32           | expression . '*' expression
   33           | expression . '/' expression
   35           | expression . EQ expression
   36           | expression . NE expression
   37           | expression . LT expression
   38           | expression . LE expression
   39           | expression . GT expression
   40           | expression . GE expression

    EQ   shift, and go to state 72
    NE   shift, and go to state 73
    LT   shift, and go to state 74
